--- a/source/R5T.F0083.Construction/R5T.F0083.Construction.csproj
+++ b/source/R5T.F0083.Construction/R5T.F0083.Construction.csproj
@@ -2,7 +2,7 @@
   <PropertyGroup>
     <OutputType>Exe</OutputType>
     <TargetFramework>net6.0</TargetFramework>
-    <NoWarn>1591</NoWarn>
+    <NoWarn>1587,1591</NoWarn>
   </PropertyGroup>
   <PropertyGroup>
     <Version>1.0.0</Version>
@@ -16,6 +16,8 @@
     <RepositoryUrl>https://github.com/SafetyCone/R5T.F0083.git</RepositoryUrl>
   </PropertyGroup>
   <ItemGroup>
+    <ProjectReference Include="..\..\..\R5T.F0033\source\R5T.F0033\R5T.F0033.csproj" />
+    <ProjectReference Include="..\..\..\R5T.Z0021\source\R5T.Z0021\R5T.Z0021.csproj" />
     <ProjectReference Include="..\R5T.F0083\R5T.F0083.csproj" />
   </ItemGroup>
 </Project>
