--- a/source/R5T.F0083/R5T.F0083.csproj
+++ b/source/R5T.F0083/R5T.F0083.csproj
@@ -1,6 +1,6 @@
-<Project Sdk="Microsoft.NET.Sdk">
+﻿<Project Sdk="Microsoft.NET.Sdk">
   <PropertyGroup>
-    <TargetFramework>netstandard2.1</TargetFramework>
+    <TargetFramework>net6.0</TargetFramework>
     <NoWarn>1591</NoWarn>
   </PropertyGroup>
   <PropertyGroup>
@@ -14,4 +14,8 @@
     <PackageRequireLicenseAcceptance>True</PackageRequireLicenseAcceptance>
     <RepositoryUrl>https://github.com/SafetyCone/R5T.F0083.git</RepositoryUrl>
   </PropertyGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\..\..\R5T.F0079\source\R5T.F0079\R5T.F0079.csproj" />
+    <ProjectReference Include="..\R5T.F0083.R001\R5T.F0083.R001.csproj" />
+  </ItemGroup>
 </Project>
