--- a/source/R5T.F0083.R001/R5T.F0083.R001.csproj
+++ b/source/R5T.F0083.R001/R5T.F0083.R001.csproj
@@ -15,6 +15,7 @@
 
   <ItemGroup>
     <ProjectReference Include="..\..\..\R5T.F0086\source\R5T.F0086\R5T.F0086.csproj" />
+    <ProjectReference Include="..\..\..\R5T.T0154\source\R5T.T0154\R5T.T0154.csproj" />
   </ItemGroup>
 
 </Project>
