--- a/source/R5T.F0083/R5T.F0083.csproj
+++ b/source/R5T.F0083/R5T.F0083.csproj
@@ -1,7 +1,7 @@
-﻿<Project Sdk="Microsoft.NET.Sdk">
+<Project Sdk="Microsoft.NET.Sdk">
   <PropertyGroup>
-    <TargetFramework>net6.0</TargetFramework>
-    <NoWarn>1591</NoWarn>
+    <TargetFramework>net8.0</TargetFramework>
+    <NoWarn>1587;1591</NoWarn>
   </PropertyGroup>
   <PropertyGroup>
     <Version>1.0.0</Version>
@@ -15,7 +15,7 @@
     <RepositoryUrl>https://github.com/SafetyCone/R5T.F0083.git</RepositoryUrl>
   </PropertyGroup>
   <ItemGroup>
-    <ProjectReference Include="..\..\..\R5T.F0079\source\R5T.F0079\R5T.F0079.csproj" />
     <ProjectReference Include="..\R5T.F0083.R001\R5T.F0083.R001.csproj" />
+    <ProjectReference Include="..\..\..\R5T.F0144\source\R5T.F0144\R5T.F0144.csproj" />
   </ItemGroup>
 </Project>
